--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "JSON Crack",
-  "short_name": "JSON Crack",
-  "description": "JSON Crack Editor is a tool for visualizing into graphs, analyzing, editing, formatting, querying, transforming and validating JSON, CSV, YAML, XML, and more.",
+  "name": "JsonFormat",
+  "short_name": "JsonFormat",
+  "description": "JsonFormat Editor is a tool for visualizing into graphs, analyzing, editing, formatting, querying, transforming and validating JSON, CSV, YAML, XML, and more.",
   "theme_color": "#36393e",
   "background_color": "#36393e",
   "display": "standalone",
